add my image and other informations

--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
 </head>
 <body>
 
+  <h1>Ali Tazikeh</h1>
 
-    <header>
-        <div class="wraper">
-            <h1>Ali Tazikeh</h1>      
-        </div>
-      
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        
-    </header>
+  <img src="images/me.png" alt="Ali Tazikeh's professional photo">
+
+  <dl>
+    <dt>Student Number:</dt>
+    <dd>41179519</dd>
+
+    <dt>Program Name:</dt>
+    <dd>Interactive Media Design</dd>
+
+    <dt>Course Code and Name:</dt>
+    <dd>MTM6201 - Introduction to Web Development</dd>
+
+    <dt>Interesting Fact:</dt>
+    <dd>I used to work as an aircraft maintenance mechanic before switching to design and tech!</dd>
+  </dl>
+
+</body>
+</html>
+
 
 
 
